# party-planner

./: compose.yml
client/: Dockerfile
client/app/: layout.tsx  page.tsx
client/app/home/: page.tsx
client/app/ui/: FormInput.tsx  VisibilityButton.tsx
server/: Dockerfile  pyproject.toml
server/src/: main.py
server/src/database/: __init__.py  crud.py  schemas.py
server/src/routers/: auth.py  events.py
server/src/services/: auth.py
