[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["domnu-raul <sir.c4ppuccin0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
motor = "^3.6.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
starlette = "^0.41.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
